# Super-Velocity-Curve

./: .gitignore  .gitmodules  AGENTS.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  README.md
.cache/clap-validator/: cv.tgz
.github/: FUNDING.yml
.github/workflows/: build.yml  nightly.yml  release.yml
Resources/FactoryProfiles/: Blank-Custom.svcp  GM-Standard.svcp  Launchpad-Drum-Rack.svcp  Maschine-Group.svcp  README.md  SPD-SX.svcp  Yamaha-FGDP.svcp
Source/Config/: AppBranding.h  AppUrls.h
Source/Engine/: EngineSettings.h  HitEventFifo.h  LibraryCompensation.h  MidiUtilities.cpp  MidiUtilities.h  MidiVelocity.h  MidiVelocityTransport.cpp  MidiVelocityTransport.h  VelocityCurve.cpp  VelocityCurve.h  VelocityEngine.cpp  VelocityEngine.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Profiles/: ControllerProfile.cpp  ControllerProfile.h  GMDrumMap.h  PadTypes.h  ProfileStore.cpp  ProfileStore.h
Source/Standalone/: StandaloneMidiPanel.cpp  StandaloneMidiPanel.h
Source/UI/: AboutPanelComponent.cpp  AboutPanelComponent.h  CalibrationWizardComponent.cpp  CalibrationWizardComponent.h  CollapsibleSection.cpp  CollapsibleSection.h  CurveEditorComponent.cpp  CurveEditorComponent.h  EditorLayout.cpp  EditorLayout.h  HistogramComponent.cpp  HistogramComponent.h  HistogramPairPanel.cpp  HistogramPairPanel.h  LookAndFeel.h  MidiActivityMeterComponent.cpp  MidiActivityMeterComponent.h  MidiNoteNames.h  MidiRoutingPanel.cpp  MidiRoutingPanel.h  NoteRemapEditorComponent.cpp  NoteRemapEditorComponent.h  PadGridComponent.cpp  PadGridComponent.h  PadInspectorComponent.cpp  PadInspectorComponent.h  PadUiMerge.h  ScrollHelpers.h  Theme.h  ThemeUi.h  UnsavedProfileDialogComponent.cpp  UnsavedProfileDialogComponent.h
Tests/: EngineTests.cpp  LayoutTests.cpp
Tools/: ExportFactoryProfiles.cpp
build-ci-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ci-test/ExportFactoryProfiles_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-ci-test/ExportFactoryProfiles_artefacts/JuceLibraryCode/Release/: Defs.txt
build-ci-test/ExportFactoryProfiles_artefacts/Release/: ExportFactoryProfiles
build-ci-test/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build-ci-test/JUCE/modules/: Makefile  cmake_install.cmake
build-ci-test/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-ci-test/JUCE/tools/modules/: Makefile  cmake_install.cmake
build-ci-test/SuperVelocityCurveMidiFx_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-ci-test/SuperVelocityCurveMidiFx_artefacts/JuceLibraryCode/Release/: Defs.txt
build-ci-test/SuperVelocityCurveMidiFx_artefacts/JuceLibraryCode/SuperVelocityCurveMidiFx_AU/: Info.plist
build-ci-test/SuperVelocityCurveMidiFx_artefacts/JuceLibraryCode/SuperVelocityCurveMidiFx_VST3/: Info.plist
build-ci-test/SuperVelocityCurveMidiFx_artefacts/JuceLibraryCode/vst3_helper/: CMakeCache.txt  Makefile  cmake_install.cmake  shared_defs_Release.txt  shared_incs_Release.txt  vst3_helper
build-ci-test/SuperVelocityCurveMidiFx_artefacts/Release/AU/Super VelocityCurve MIDI FX.component/Contents/: Info.plist
build-ci-test/SuperVelocityCurveMidiFx_artefacts/Release/CLAP/Super VelocityCurve MIDI FX.clap/Contents/: Info.plist
build-ci-test/SuperVelocityCurveMidiFx_artefacts/Release/VST3/Super VelocityCurve MIDI FX.vst3/Contents/: Info.plist
build-ci-test/SuperVelocityCurveMidiFx_artefacts/Release/VST3/Super VelocityCurve MIDI FX.vst3/Contents/Resources/: moduleinfo.json
build-ci-test/SuperVelocityCurveTests_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-ci-test/SuperVelocityCurveTests_artefacts/JuceLibraryCode/Release/: Defs.txt
build-ci-test/SuperVelocityCurve_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-ci-test/SuperVelocityCurve_artefacts/JuceLibraryCode/Release/: Defs.txt
build-ci-test/SuperVelocityCurve_artefacts/JuceLibraryCode/SuperVelocityCurve_AU/: Info.plist
build-ci-test/SuperVelocityCurve_artefacts/JuceLibraryCode/SuperVelocityCurve_Standalone/: Info.plist
build-ci-test/SuperVelocityCurve_artefacts/JuceLibraryCode/SuperVelocityCurve_VST3/: Info.plist
build-ci-test/SuperVelocityCurve_artefacts/JuceLibraryCode/vst3_helper/: CMakeCache.txt  Makefile  cmake_install.cmake  shared_defs_Release.txt  shared_incs_Release.txt  vst3_helper
build-ci-test/SuperVelocityCurve_artefacts/Release/AU/Super VelocityCurve.component/Contents/: Info.plist
build-ci-test/SuperVelocityCurve_artefacts/Release/Standalone/Super VelocityCurve.app/Contents/: Info.plist
build-ci-test/SuperVelocityCurve_artefacts/Release/VST3/Super VelocityCurve.vst3/Contents/: Info.plist
build-ci-test/SuperVelocityCurve_artefacts/Release/VST3/Super VelocityCurve.vst3/Contents/Resources/: moduleinfo.json
build-rwd/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-rwd/JUCE/: cmake_install.cmake
build-rwd/JUCE/modules/: cmake_install.cmake
build-rwd/JUCE/tools/: .ninja_deps  .ninja_log  CMakeCache.txt  JUCEToolsExport.cmake  build.ninja  cmake_install.cmake
build-rwd/JUCE/tools/modules/: cmake_install.cmake
build-rwd/Testing/Temporary/: CTestCostData.txt
build-rwd/juce_binarydata_SuperVelocityCurveBinaryData/JuceLibraryCode/: input_file_list
dist-assets/macOS/: Install Super Velocity Curve.command  README.txt
docs/: DAW_TEST_MATRIX.md  PLUGINVAL.md  README.md
docs/developer/: AGENTIC_QA.md  CI.md  CONTRIBUTING.md  DAW_TEST_MATRIX.md  NAMING.md  PLUGINVAL.md  RELEASE.md  REPO_RENAME.md  SMOKE_RUN_2026-06-09.md  TESTING.md  VERSIONING.md  WINDOWS_TESTING.md
docs/user/: getting-started.md  install.md
scripts/: check-branding.sh  install-macos.sh  lipo-macos-universal.sh  package-macos-release.sh  qa-iterate.sh  validate-clap.sh  validate-plugins-local.sh  verify-macos-installer.sh  watch-ci.sh
scripts/dev/: cleanup-legacy-plugin-bundles.sh
